testing of task adding s to user

--- a/code.html
+++ b/code.html
@@ -1,5 +1,5 @@
 <form action='code.html'>
-User : <input type='text' name='x' />
+Users: <input type='text' name='x' />
 <br />
 Pass : <input type='password' />
 <br />
