second testing of full task

--- a/code.html
+++ b/code.html
@@ -1,4 +1,4 @@
-<form action='code.html'>
+<form action='index.html'>
 Users: <input type='text' name='x' />
 <br />
 Pass : <input type='password' />
